apps/routers/talos-related-routes/harvey/moomboo/harvey-moomboo-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harvey-moomboo
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  # - websecure
  routes:
  - kind: Rule
    match: Host(`harvey.moomboo.space`) && PathPrefix(`/`)
    services:
    - kind: Service
      name: harvey-moomboo
      namespace: traefik-staging
      port: 80
      # scheme: https
  # tls:
  #   certResolver: prodresolver

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: harvey-moomboo
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`harvey.moomboo.space`)
    services:
    - name: harvey-moomboo
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
